# Benchmark_AndroidApp

./: .gitignore  README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: tft7b_lulu (1).glb  tft7b_lulu.glb
app/src/main/assets/objects/character/: hearty_blepup.glb
app/src/main/assets/shaders/: animation.vert  animationDepth.frag  animationDepth.vert  depthMap.vert  shaderStart.frag  shaderStart.vert
app/src/main/cpp/: CMakeLists.txt  OpenGLCode.cpp  memoryPerformance.cpp  myapplication.cpp  sortingAlg.cpp
app/src/main/cpp/gltf/: tiny_gltf.h
app/src/main/cpp/includes/: Animation.h  Animator.h  AssimpGLMHelpers.h  Bone.h  Camera.hpp  Mesh.hpp  Shader.hpp  model_animation.h
app/src/main/cpp/src/: Animation.cpp  Animator.cpp  Bone.cpp  Camera.cpp  Mesh.cpp  Model3D.cpp  Shader.cpp  model_animation.cpp  myapplication.cpp  openGLCode.cpp  tiny_obj_loader.cpp
app/src/main/java/com/example/myapplication/: AutomatedBenchmarkManager.kt  BenchmarkGraphActivity.kt  BenchmarkResultOpenGL.kt  DeviceInfo.kt  MainActivity.kt  MemoryPerformanceActivity.kt  MyGLSurfaceView.kt  MyRenderer.kt  OpenGLActivity.kt  SecondActivity.kt  testCpuWithSorting.kt
app/src/main/res/layout/: activity_device_info.xml  activity_main.xml  activity_memory_performance.xml  activity_opengl.xml  activity_second.xml  activity_test_cpu.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
